show social media pages link in mobile

--- a/conversion-rate-optimisation.html
+++ b/conversion-rate-optimisation.html
@@ -148,16 +148,16 @@
                     </div>
                 </div>
             </div>
-            <div class="social-links-row d-none d-md-block">
+            <div class="social-links-row">
                 <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                    <div class="row justify-content-md-center">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link" href="shopify-development-agency.html">Shopify</a>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link" href="wordpress-development-agency.html">Wordpress</a>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link active" href="conversion-rate-optimisation.html">Conversion&nbsp;Rate&nbsp;Optimisation</a>
                         </div>
                     </div>
