--- a/copywriting-agency.html
+++ b/copywriting-agency.html
@@ -148,22 +148,22 @@
                     </div>
                 </div>
             </div>
-            <div class="social-links-row d-none d-md-block">
+            <div class="social-links-row">
                 <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                    <div class="row justify-content-md-center">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link" href="video-content-agency.html">Video&nbsp;Content</a>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link active" href="copywriting-agency.html">Copywriting</a>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link" href="branding-agency.html">Branding&nbsp;&&nbsp;Logo</a>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link" href="podcast-marketing.html">Podcast&nbsp;Marketing</a>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link" href="youtube-marketing.html">Youtube&nbsp;Marketing</a>
                         </div>
                     </div>
