--- a/digital-pr.html
+++ b/digital-pr.html
@@ -140,22 +140,22 @@
                   </div>
                </div>
             </div>
-            <div class="social-links-row d-none d-md-block">
+            <div class="social-links-row">
                <div class="container">
-                  <div class="row justify-content-center">
-                     <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                  <div class="row justify-content-md-center">
+                     <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                         <a class="social-link" href="organic-seo.html">Organic&nbsp;SEO</a>
                      </div>
-                     <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                     <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                         <a class="social-link" href="ecommerce-seo.html">eCommerce&nbsp;SEO</a>
                      </div>
-                     <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                     <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                         <a class="social-link" href="shopify-seo-agency.html">Shopify&nbsp;SEO&nbsp;Agency</a>
                      </div>
-                     <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                     <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                         <a class="social-link" href="wordpress-seo.html">Wordpress&nbsp;SEO&nbsp;Agency</a>
                      </div>
-                     <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                     <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                         <a class="social-link active" href="digital-pr.html">Digital&nbsp;PR</a>
                      </div>
                   </div>
