--- a/pay-per-click.html
+++ b/pay-per-click.html
@@ -140,19 +140,19 @@
                </div>
             </div>
          </div>
-         <div class="social-links-row d-none d-md-block">
+         <div class="social-links-row">
             <div class="container">
-               <div class="row justify-content-center">
-                  <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+               <div class="row justify-content-md-center">
+                  <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                      <a class="social-link" href="google-advertising-agency.html">Google&nbsp;Search</a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                  <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                      <a class="social-link" href="google-shopping-management.html">Google&nbsp;Shoping</a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                  <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                      <a class="social-link" href="youtube-advertising.html">Youtube&nbsp;Advertising</a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                  <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                      <a class="social-link" href="bing-ads.html">Bing&nbsp;Ads</a>
                   </div>
                </div>
