--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -140,25 +140,25 @@
                   </div>
                </div>
             </div>
-            <div class="social-links-row d-none d-md-block">
+            <div class="social-links-row">
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link" href="facebook-advertising.html">Facebook&nbsp;Advertising</a>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link" href="instagram-advertising.html">Instagram&nbsp;Advertising</a>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link" href="linkdin-advertising.html">Linkdin&nbsp;Advertising</a>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link" href="tiktok-advertising.html">Tiktok&nbsp;Advertising</a>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link" href="twitter-advertising.html">Twitter&nbsp;Advertising</a>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link" href="pinterest-advertising.html">Pinterest&nbsp;Advertising</a>
                         </div>
                     </div>
