--- a/email-marketing.html
+++ b/email-marketing.html
@@ -147,10 +147,10 @@
                     </div>
                 </div>
             </div>
-            <div class="social-links-row d-none d-md-block">
+            <div class="social-links-row">
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <div class="col-6 col-sm-6  col-md-4 col-lg-2 my-2">
                             <a class="social-link" href="#">Klaviyo&nbsp;Email&nbsp;Marketing</a>
                         </div>
                     </div>
