--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                </h1>
             </div>
          </div>
-         <div class="row cards-row mt-5">
+         <div class="row cards-row mt-5 d-none d-md-flex">
             <div class="col-sm-6 col-md-4 text-center mt-2">
                <div class="case-card">
                   <img src="assets/images/new//Projects/Projects - Branding - DubaiScop.jpg" class="img-fluid">
@@ -346,6 +346,69 @@
                   <div class="case-card-text text-start">
                      <h6>Yr Pod, Hertfordshire</h6>
                      <h5>41% INCRESE REVENUE FROM FACEBOOK & SEO</h5>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="client-carousel cards-row d-md-none">
+            <div class="owl-carousel our-projects">
+               <div class="item">
+                  <div class="carosal-item text-center">
+                    <div class="case-card">
+                        <img src="assets/images/new/Projects/Projects - Branding - Mutasil.jpg" class="img-fluid">
+                        <div class="case-card-text text-start">
+                           <h6>Yr Pod, Hertfordshire</h6>
+                           <h5>GENERATED AN AVERAGE FACEBOOK ROAS  OF 3.51 IN SIX MONTHS</h5>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="item">
+                  <div class="carosal-item text-center">
+                    <div class="case-card">
+                        <img src="assets/images/new/Projects/Projects - Cygnus.jpg" class="img-fluid">
+                        <div class="case-card-text text-start">
+                           <h6>Yr Pod, Hertfordshire</h6>
+                           <h5>150K REVENUE GENERATED FROM FACEBOOK ADS</h5>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="item">
+                  <div class="carosal-item text-center">
+                    <div class="case-card">
+                        <img src="assets/images/new/Projects/Projects - Elite Hub.jpg" class="img-fluid">
+                        <div class="case-card-text text-start">
+                           <h6>Yr Pod, Hertfordshire</h6>
+                           <h5>GENERATED AN AVERAGE ROAS OF 21.12 FROM FACEBOOK</h5>
+                           <div class="d-flex flex-w align-items-center justify-content-between">
+                              <button class="btn">Case Study</button>
+                              <i class="fa fa-search"></i>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="item">
+                  <div class="carosal-item text-center">
+                    <div class="case-card">
+                        <img src="assets/images/new/Projects/Projects - Hamnet.jpg" class="img-fluid">
+                        <div class="case-card-text text-start">
+                           <h6>Yr Pod, Hertfordshire</h6>
+                           <h5>175% INCREASE IN THE TOTAL REVENUE GENERATED TO DATE </h5>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="item">
+                  <div class="carosal-item text-center">
+                    <div class="case-card">
+                        <img src="assets/images/new/Projects/Projects - Mobile App UI .jpg" class="img-fluid">
+                        <div class="case-card-text text-start">
+                           <h6>Yr Pod, Hertfordshire</h6>
+                           <h5>41% INCRESE REVENUE FROM FACEBOOK & SEO</h5>
+                        </div>
+                     </div>
                   </div>
                </div>
             </div>
@@ -484,7 +547,7 @@
                </h1>
             </div>
          </div>
-         <div class="row cards-row mt-5">
+         <div class="row cards-row mt-5 d-none d-md-flex">
             <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
                <div class="card">
                   <img src="assets/images/new/team/Team 1.jpg" class="img-fluid">
@@ -522,6 +585,54 @@
                </div>
             </div>
          </div>
+         <div class="client-carousel cards d-md-none">
+            <div class="owl-carousel our-projects">
+                <div class="item">
+                    <div class="carosal-item text-center">
+                        <div class="card">
+                            <img src="assets/images/new/team/Team 1.jpg" class="img-fluid">
+                            <div class="card-footer text-center">
+                               <h6 class="mb-0">Marvin McKinney</h6>
+                               <p class="mb-0">UI/UX Designer</p>
+                            </div>
+                         </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="carosal-item text-center">
+                        <div class="card">
+                            <img src="assets/images/new/team/Team 2.jpg" class="img-fluid">
+                            <div class="card-footer text-center">
+                               <h6 class="mb-0">Mark Wiens</h6>
+                               <p class="mb-0">App Developer</p>
+                            </div>
+                         </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="carosal-item text-center">
+                        <div class="card">
+                            <img src="assets/images/new/team/Team 3.jpg" class="img-fluid">
+                            <div class="card-footer text-center">
+                               <h6 class="mb-0">Sohana</h6>
+                               <p class="mb-0">WordPress Developer</p>
+                            </div>
+                         </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="carosal-item text-center">
+                        <div class="card">
+                            <img src="assets/images/new/team/Team 4.jpg" class="img-fluid">
+                            <div class="card-footer text-center">
+                               <h6 class="mb-0">Brooklyn Simmons</h6>
+                               <p class="mb-0">Cloud Enginner</p>
+                            </div>
+                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
       </div>
    </section>
    <!-- greate team section end -->
