change pricing section buttons

--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@
                   <div class="card-body">
                      <h1>2000</h1>
                      <h6>Per Month + VAT</h6>
-                     <button class="btn package-view-details-btn">View Details</button>
+                     <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                   </div>
                </div>
             </div>
@@ -1025,7 +1025,7 @@
                   <div class="card-body">
                      <h1>3000</h1>
                      <h6>Per Month + VAT</h6>
-                     <button class="btn package-view-details-btn">View Details</button>
+                     <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                   </div>
                </div>
             </div>
@@ -1037,7 +1037,7 @@
                   <div class="card-body">
                      <h1>6000</h1>
                      <h6>Per Month + VAT</h6>
-                     <button class="btn package-view-details-btn">View Details</button>
+                     <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                   </div>
                </div>
             </div>
@@ -1050,7 +1050,7 @@
                   <div class="card-body">
                      <h1>10000</h1>
                      <h6>Per Month + VAT</h6>
-                     <button class="btn package-view-details-btn">View Details</button>
+                     <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                   </div>
                </div>
             </div>
