--- a/content-marketing.html
+++ b/content-marketing.html
@@ -859,7 +859,7 @@
                             <div class="card-body">
                                 <h1>2000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
@@ -871,7 +871,7 @@
                             <div class="card-body">
                                 <h1>3000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
@@ -883,7 +883,7 @@
                             <div class="card-body">
                                 <h1>6000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
@@ -896,7 +896,7 @@
                             <div class="card-body">
                                 <h1>10000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
