--- a/conversion-rate-optimisation.html
+++ b/conversion-rate-optimisation.html
@@ -690,7 +690,7 @@
                             <div class="card-body">
                                 <h1>2000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
@@ -702,7 +702,7 @@
                             <div class="card-body">
                                 <h1>3000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
@@ -714,7 +714,7 @@
                             <div class="card-body">
                                 <h1>6000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
@@ -727,7 +727,7 @@
                             <div class="card-body">
                                 <h1>10000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
