--- a/copywriting-agency.html
+++ b/copywriting-agency.html
@@ -621,7 +621,7 @@
                             <div class="card-body">
                                 <h1>2000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
@@ -633,7 +633,7 @@
                             <div class="card-body">
                                 <h1>3000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
@@ -645,7 +645,7 @@
                             <div class="card-body">
                                 <h1>6000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
@@ -658,7 +658,7 @@
                             <div class="card-body">
                                 <h1>10000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
