--- a/ecommerce-seo.html
+++ b/ecommerce-seo.html
@@ -757,7 +757,7 @@
                         <div class="card-body">
                            <h1>2000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
@@ -769,7 +769,7 @@
                         <div class="card-body">
                            <h1>3000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
@@ -781,7 +781,7 @@
                         <div class="card-body">
                            <h1>6000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
@@ -794,7 +794,7 @@
                         <div class="card-body">
                            <h1>10000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
