--- a/facebook-advertising.html
+++ b/facebook-advertising.html
@@ -728,7 +728,7 @@
                      <div class="card-body">
                         <h1>2000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -740,7 +740,7 @@
                      <div class="card-body">
                         <h1>3000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -752,7 +752,7 @@
                      <div class="card-body">
                         <h1>6000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -765,7 +765,7 @@
                      <div class="card-body">
                         <h1>10000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
