--- a/google-shopping-management.html
+++ b/google-shopping-management.html
@@ -648,7 +648,7 @@
                      <div class="card-body">
                         <h1>2000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -660,7 +660,7 @@
                      <div class="card-body">
                         <h1>3000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -672,7 +672,7 @@
                      <div class="card-body">
                         <h1>6000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -685,7 +685,7 @@
                      <div class="card-body">
                         <h1>10000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
