--- a/klaviyo-email-marketing.html
+++ b/klaviyo-email-marketing.html
@@ -560,7 +560,7 @@
                             <div class="card-body">
                                 <h1>2000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
@@ -572,7 +572,7 @@
                             <div class="card-body">
                                 <h1>3000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
@@ -584,7 +584,7 @@
                             <div class="card-body">
                                 <h1>6000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
@@ -597,7 +597,7 @@
                             <div class="card-body">
                                 <h1>10000</h1>
                                 <h6>Per Month + VAT</h6>
-                                <button class="btn package-view-details-btn">View Details</button>
+                                <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                             </div>
                         </div>
                     </div>
