--- a/packages.html
+++ b/packages.html
@@ -315,7 +315,7 @@
                         <div class="card-body">
                            <h1>2000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
@@ -327,7 +327,7 @@
                         <div class="card-body">
                            <h1>3000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
@@ -339,7 +339,7 @@
                         <div class="card-body">
                            <h1>6000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
@@ -352,7 +352,7 @@
                         <div class="card-body">
                            <h1>10000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
