--- a/pay-per-click.html
+++ b/pay-per-click.html
@@ -582,7 +582,7 @@
                      <div class="card-body">
                         <h1>2000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -594,7 +594,7 @@
                      <div class="card-body">
                         <h1>3000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -606,7 +606,7 @@
                      <div class="card-body">
                         <h1>6000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -619,7 +619,7 @@
                      <div class="card-body">
                         <h1>10000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
