--- a/pinterest-advertising.html
+++ b/pinterest-advertising.html
@@ -624,7 +624,7 @@
                      <div class="card-body">
                         <h1>2000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -636,7 +636,7 @@
                      <div class="card-body">
                         <h1>3000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -648,7 +648,7 @@
                      <div class="card-body">
                         <h1>6000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -661,7 +661,7 @@
                      <div class="card-body">
                         <h1>10000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
