--- a/shopify-seo-agency.html
+++ b/shopify-seo-agency.html
@@ -713,7 +713,7 @@
                         <div class="card-body">
                            <h1>2000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
@@ -725,7 +725,7 @@
                         <div class="card-body">
                            <h1>3000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
@@ -737,7 +737,7 @@
                         <div class="card-body">
                            <h1>6000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
@@ -750,7 +750,7 @@
                         <div class="card-body">
                            <h1>10000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
