--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -712,7 +712,7 @@
                     <div class="card-body">
                        <h1>2000</h1>
                        <h6>Per Month + VAT</h6>
-                       <button class="btn package-view-details-btn">View Details</button>
+                       <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                     </div>
                  </div>
               </div>
@@ -724,7 +724,7 @@
                     <div class="card-body">
                        <h1>3000</h1>
                        <h6>Per Month + VAT</h6>
-                       <button class="btn package-view-details-btn">View Details</button>
+                       <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                     </div>
                  </div>
               </div>
@@ -736,7 +736,7 @@
                     <div class="card-body">
                        <h1>6000</h1>
                        <h6>Per Month + VAT</h6>
-                       <button class="btn package-view-details-btn">View Details</button>
+                       <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                     </div>
                  </div>
               </div>
@@ -749,7 +749,7 @@
                     <div class="card-body">
                        <h1>10000</h1>
                        <h6>Per Month + VAT</h6>
-                       <button class="btn package-view-details-btn">View Details</button>
+                       <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                     </div>
                  </div>
               </div>
