--- a/twitter-advertising.html
+++ b/twitter-advertising.html
@@ -731,7 +731,7 @@
                      <div class="card-body">
                         <h1>2000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -743,7 +743,7 @@
                      <div class="card-body">
                         <h1>3000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -755,7 +755,7 @@
                      <div class="card-body">
                         <h1>6000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
@@ -768,7 +768,7 @@
                      <div class="card-body">
                         <h1>10000</h1>
                         <h6>Per Month + VAT</h6>
-                        <button class="btn package-view-details-btn">View Details</button>
+                        <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                      </div>
                   </div>
                </div>
