--- a/wordpress-seo.html
+++ b/wordpress-seo.html
@@ -656,7 +656,7 @@
                         <div class="card-body">
                            <h1>2000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
@@ -668,7 +668,7 @@
                         <div class="card-body">
                            <h1>3000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
@@ -680,7 +680,7 @@
                         <div class="card-body">
                            <h1>6000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
@@ -693,7 +693,7 @@
                         <div class="card-body">
                            <h1>10000</h1>
                            <h6>Per Month + VAT</h6>
-                           <button class="btn package-view-details-btn">View Details</button>
+                           <a href="./date-time.html" class="btn package-view-details-btn">Schedule a Call</a>
                         </div>
                      </div>
                   </div>
